[package]
name = "game-oxide-framework"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = { version = "0.17.0", features = ["specs-derive"] }

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image"]

